--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ header {
 
 .main {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .images img {
@@ -73,7 +73,7 @@ header {
   color: #90AFC5;
 }
 
-.visit {
+.btn-visit {
   font-size: 32px;
   font-weight: bold;
   color: #90AFC5;
@@ -89,7 +89,7 @@ header {
   touch-action: manipulation;
 }
 
-.visit:after {
+.btn-visit:after {
   content: "";
   background-color: #1C75BC;
   width: 100%;
@@ -101,13 +101,86 @@ header {
   transition: 0.2s;
 }
 
-.visit:hover:after {
+.btn-visit:hover:after {
   top: 0px;
   left: 0px;
 }
 
 @media (min-width: 768px) {
-  .visit {
+  .btn-visit {
     padding: 13px 50px 13px;
   }
+}
+
+
+
+.laporan {
+  text-align: center;
+}
+
+.laporan a {
+  text-decoration: none;
+}
+
+.btn-download {
+  all: unset;
+  text-decoration: none;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-download::after,
+.btn-download::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.btn-download::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #1C75BC;
+  border-radius: 10px;
+}
+
+.btn-download::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.btn-download:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.btn-download:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.btn-download:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
 }
